--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-./prod/__pycache__/
-./prod/services/__pycache__/
-./test/__pycache__/
+prod/__pycache__/
+prod/services/__pycache__/
+test/__pycache__/
