updated .gitignore and added documentation and comments

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ prod/__pycache__/
 prod/services/__pycache__/
 test/__pycache__/
 .pytest_cache/
+prod/tempCodeRunnerFile.py
+prod/.DS_Store
+local_data.csv
