--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
-prod/__pycache__/
-prod/services/__pycache__/
-test/__pycache__
+__pycache__/
+*.py[cod]
 .pytest_cache/
-prod/tempCodeRunnerFile.py
-prod/.DS_Store
-prod/services/.DS_Store
-local_data.csv
-prod/.DS_Store
+*.egg-info/
+dist/
+build/
+venv/
+.env
+.coverage
+htmlcov/
 .DS_Store
-.vscode/settings.json
+.vscode/
+local_data.csv
+CLAUDE.md
+.claude/
