--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-black
-dash
-pandas
-plotly
-scikit-learn
-dash_bootstrap_components
-scipy
-numpy
-python-dateutil
-selenium
-datetime
-scikit-learn
+dash>=2.14.0
+dash-bootstrap-components>=1.5.0
+pandas>=2.0.0
+plotly>=5.18.0
+scikit-learn>=1.3.0
+scipy>=1.11.0
+numpy>=1.24.0
+python-dateutil>=2.8.0
+openpyxl>=3.1.0
